# rusymbols

./: .gitignore  Cargo.toml  README.md
src/: core.rs  lib.rs
src/core/: actions.rs  bin_operators.rs  brackets.rs  eval.rs  expr.rs  expression.rs  literals.rs  units.rs  val.rs  var.rs
src/core/actions/: add.rs  mul.rs  sub.rs
src/core/units/: brackets.rs  equation.rs  value.rs  variable.rs
